Fixed home and about me page spacings

--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,7 @@
             taken computer science based classes, and self-study programming languages
             or create small projects to practice and apply my skills.
           </p>
-          <p>
+          <p id = "about-me-par-2">
             My most important characteristic is being able to adapt
             and be creative when solving a problem. From my experience while working
             on school and personal projects, plans are made to be broken. If a 
