Updated clubs/organizations in about me section

--- a/aboutme.html
+++ b/aboutme.html
@@ -47,9 +47,15 @@
           </p>
           <p>
             Currently, I am involved in the National Beta Club and
-            National Honors Society which I plan to participate in all throughout high school.
+            Hack Club which I plan to participate in all throughout high school. Beta Club is 
+            a place that offers members volunteer and scholarship opportunities. Hack Club is an international
+            organization focused on computer science hackathons and projects.
             The main benefits that I am seeking are teamwork and leadership experiences, both
-            of which are imperative to success on future projects. 
+            of which are imperative to success on future projects. I also work with a friend
+            on a nonprofit organization that is focused on teaching elementary to high school 
+            students various areas of coding through projects. It's a great educational experience
+            for me since I get to talk to people who have much less experience in the field than me. So 
+            I get valuable experience in teaching as well as debugging code.
           </p>
           <p>
             So far, an accomplishment in high school was the entrepreneurship project
@@ -60,8 +66,8 @@
             have so much freedom on in terms of teammates and the topic, so it was a fantastic experience.
             Despite our group having the disadvantage in the project due to the lack of practice and 
             time to prepare compared to upper classmen who have already done the project before and had 
-            firsthand experience, we have gotten far. This year, with the experience that we had last
-            year, we will be able to adapt and perform better than we had the previous year.
+            firsthand experience, we have gotten far. I also qualified for the finals of the project my 
+            sophomore year, and I'm hoping we will do even better this year.
           </p>
           <p>
             The information you can find on this website is picked out to best show my practical skills,
