--- a/projects.html
+++ b/projects.html
@@ -45,7 +45,7 @@
         </div>
         <div>
           <img src="Images/text_adventure.png" height="500" width="500" alt="Part of the code">
-          <img class = "proj_img_2" src="Images/text_adventure_2.png" alt="Gameplay Sample" height="500" width="490">
+          <img class = "proj_img_2" src="Images/text_adventure_2.png" alt="Gameplay Sample" height="500" width="490"/>
         </div>
       </div>
       <div class = "main">
