Added 2 projects for CSA.

--- a/projects.html
+++ b/projects.html
@@ -14,7 +14,59 @@
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </div>
-    <div>
+    <div class="projects">
+      <div class = "main">
+        <div>
+          <p class = "subheading">GREENFOOT SIMULATION PROJECT</p>
+          <h3>Covid Simulator</h3>
+          <p class = "date">
+            <i>August 2020, AP Computer Science Applications</i>
+          </p>
+          <p>  
+            The goal of this project was to extend a simple simulation to incorporate more elements into it. 
+            The language used was Java using an IDE called Greenfoot. Even though we had many options, my group 
+            decided to improve the contagion simulation we already had rather than come up with a brand new idea. 
+            There were plenty of great ideas to implement, so we felt no need to complicate the problem. The only 
+            real challenges we encountered were using Greenfoot and Java. Greenfoot was new to us, and even though 
+            both of us knew Java, we weren't completely confortable with it. To ensure that we finished on time, 
+            we kept the ideas simple and easy to incorporate, yet they were still original and added a significant amount
+            to the original simulation. It was overall a quick and enjoyable project that helped me fortify my knowledge of 
+            Java and get quite practical experience of altering already existing things to improve them.
+          </p>
+          <a href="https://github.com/kabir-shah/CovidSimulator" target="_blank" role="button">Link to project</a>
+        </div>
+        <div>
+          <img src="Images/covid_simulator.png" width="500" alt="Part of the simulation displaying spread of virus and different states people are at">
+          <img class = "proj_img_2" src="Images/covid_simulator_2.png" alt="Code sample responsible for determining what happens to every individual at every step" width="600"/>
+        </div>
+      </div>  
+      <div class = "main">
+        <div>
+          <p class = "subheading">EDUCATIONAL GAME PROJECT</p>
+          <h3>Particle Project</h3>
+          <p class = "date">
+            <i>November 2020 - December 2020, AP Computer Science Applications</i>
+          </p>
+          <p>  
+            The goal of this project was to use Java in Greenfoot to develop a game that would be educational in any 
+            chosen aspect. Influenced by our current classes, my team decided to do a chemistry-related game that would 
+            involve particles of different elements and demonstrating the reactions that can happen between them. One challenge 
+            we faced was overcomplicating the project. Looking back at it after seeing the projects others made, it was 
+            unnecessary for us to pick an idea that was so complicated and lengthy. On the other hand, I do believe that we did 
+            an incredible job in creating our idea, so even though it was unnecessary we still learned a lot. This project also made me 
+            realize how important teamwork (or rather lack of it) can influence a project. Some people barely contributed, which meant that those 
+            who did had to do way more work than they intended to, making the project much more stressful than we initially thought 
+            it would be. This project was one of the many in the year 2020 that made me change my work habits when in a team to 
+            enforce stricter rules and deadlines to make sure that such incidents don't happen again, because it was certainly not 
+            a pleasant experience. 
+          </p>
+          <a href="https://docs.google.com/document/d/1n9sLb1JzAooHzlA4ffUt3sc0b4xK0q11zeFgF7vaIt4/edit?usp=sharing" target="_blank" role="button">Link to project documentation.</a>
+        </div>
+        <div>
+          <img src="Images/particle_project.png" width="550" alt="Gameplay sample demonstrating particles and a reaction terminal">
+          <img class = "proj_img_2" src="Images/particle_project_2.png" alt="Part of the code responsible for creating new reactions" width="575"/>
+        </div>
+      </div>
       <div class = "main">
         <div>
           <p class = "subheading">TEXT ADVENTURE PROJECT</p>
