Update resume and about me

--- a/aboutme.html
+++ b/aboutme.html
@@ -46,16 +46,17 @@
             crucial to understand when it went wrong and what to do about it.
           </p>
           <p>
-            Currently, I am involved in the National Beta Club and
-            Hack Club which I plan to participate in all throughout high school. Beta Club is 
-            a place that offers members volunteer and scholarship opportunities. Hack Club is an international
+            Currently, I am involved in the
+            Hack Club which I plan to participate in all throughout high school. Hack Club is an international
             organization focused on computer science hackathons and projects.
             The main benefits that I am seeking are teamwork and leadership experiences, both
             of which are imperative to success on future projects. I also work with a friend
-            on a nonprofit organization that is focused on teaching elementary to high school 
+            on a nonprofit organization named Cohack that is focused on teaching elementary to high school 
             students various areas of coding through projects. It's a great educational experience
             for me since I get to talk to people who have much less experience in the field than me. So 
-            I get valuable experience in teaching as well as debugging code.
+            I get valuable experience in teaching as well as debugging code. We have also already ran a full
+            virtual hackathon all by ourselves which was an incredible and new experience that brought my experience 
+            of problem solving to a whole new level. 
           </p>
           <p>
             So far, an accomplishment in high school was the entrepreneurship project
