Added chatbot project

--- a/projects.html
+++ b/projects.html
@@ -17,6 +17,30 @@
     <div class="projects">
       <div class = "main">
         <div>
+          <p class = "subheading">CHATBOT PROJECT</p>
+          <h3>Fun Facts Chatbot</h3>
+          <p class = "date">
+            <i>April 2021, AP Computer Science Applications</i>
+          </p>
+          <p>  
+            The goal of this project was to create a working chatbot that would ask questions and give
+            prompts of its own but also respond to user input as accurately as possible. Due to the time 
+            restrictions, my team was unable to implement a full natural language processing library into
+            the chatbot, which meant we mostly hard coded the responses it gives. Nevertheless, the bot still 
+            came out well, mostly giving reasonable responses. The most difficult part of the project was 
+            considering all the common cases and writing a method to address them since we hard coded the 
+            responses. It would certainly be interesting to redo the project but use an actual NLP library 
+            this time and see how much better it would be. 
+          </p>
+          <a href="https://github.com/Oleby0406/CSAChatbot" target="_blank" role="button">Link to project</a>
+        </div>
+        <div>
+          <img src="Images/chatbot.png" width="" alt="Sample conversation. The questions and funfacts are randomly generated from a list.">
+          <img class = "proj_img_2" src="Images/chatbot_2.png" alt="Code sample demonstrating the main method that's responsible for the conversation cycle and calling all the other methods." width="800"/>
+        </div>
+      </div>
+      <div class = "main">
+        <div>
           <p class = "subheading">GREENFOOT SIMULATION PROJECT</p>
           <h3>Covid Simulator</h3>
           <p class = "date">
