Smooth(er?) CSS

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       <a href="projects.html">Projects</a>
       <a href="contact.html">Contact</a>
     </div>
-      <div class = "contact">
+      <div class = "main contact">
         <p>Dublin, California</p>
         <p>bychenkov8292@mydusd.org</p>
       </div>
