--- a/workexperience.html
+++ b/workexperience.html
@@ -15,7 +15,7 @@
       <a href="contact.html">Contact</a>
     </div>
     <div class = "main">
-      <p class = "subheading">WORK EXPERIENCE NARRATIVE</p>
+      <p class = "heading">WORK EXPERIENCE NARRATIVE</p>
       <p>During the time I've spent in the engineering program, I have had the opportunity
         to meet multiple industry professionals who shared their experiences in the workplace.
         I also had the chance to go on field trips to various places to further enchance my knowledge
@@ -48,9 +48,7 @@
         for engineers to be accurate and check their calculations multiple times because those errors always end up 
         escalating out of control. 
       </p>
-    </div>
-    <div class = "resume">
-      <a href = "resume.pdf" target="_blank" role="button">Resume in PDF Format</a>
+      <a id="resume" href = "resume.pdf" target="_blank" role="button">Resume in PDF Format</a>
     </div>
   </body>
 </html>
