--- a/aboutme.html
+++ b/aboutme.html
@@ -16,10 +16,10 @@
 		<a href="projects.html">Projects</a>
 		<a href="contact.html">Contact</a>
 	</div>
-	<div>
+	<div  class="main">
     <img class = "am-pic" src="Images/me.png">
 		<div>
-			<div class="main aboutme">
+			<div>
           <div id = "quote">“Software is a great combination between
             artistry and engineering” - Bill Gates
           </div>
