--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
   <head>
@@ -16,8 +15,8 @@
       <a href="contact.html">Contact</a>
     </div>
     <div class="header">
-      <h1>Oleg Bychenkov</h1>
-      <h3>An 11th grade student in Dublin High School</h3>
+      <h1 id = "mainName">Oleg Bychenkov</h1>
+      <h3 id = "mainDesc">A 12th grade student in Dublin High School</h3>
     </div>
     <script src="script.js"></script>
   </body>
